--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.so
 *.dylib
 
+# Config files with sectrets
+.env
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -12,4 +15,4 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+andro/vendor/
