--- a/andro/Dockerfile
+++ b/andro/Dockerfile
@@ -1,6 +1,6 @@
-FROM golang:1.16
+FROM golang:1.16.6-buster
 
 LABEL maintainer="EPI"
-LABEL description="image supporting kuiper api framework"
+LABEL description="image supporting kuiper-andro api framework"
 LABEL version="0.1"
 
