--- a/andro/Dockerfile
+++ b/andro/Dockerfile
@@ -33,12 +33,20 @@ RUN go build
 
 
 # -------------------------------------
+# Move to /cmd/migration directory and build migration
+WORKDIR /build/cmd/migration
+
+# Build the application
+RUN go build 
+
+# -------------------------------------
 # Move to /dist directory as the place for resulting binary folder
 WORKDIR /dist
 
 # Copy binary from build to main folder
 RUN cp /build/cmd/api/api .
 RUN cp /build/cmd/api/conf.local.yaml .
+RUN cp /build/cmd/migration/migration .
 RUN cp -R /build/assets .
 
 # -------------------------------------
@@ -46,7 +54,8 @@ RUN cp -R /build/assets .
 EXPOSE 8080
 
 # Command to run when starting the container
-CMD ["/dist/api"]
+CMD ["/dist/migration"]
+
 
 
 
