--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,9 @@ version: '3.8'
 services:
   dbdatasrv:
     container_name: dbdata_cnt
-    build: ./datasrv
+    build: 
+      context: .
+      dockerfile: datasrv/Dockerfile
     image: epi_dbdata:1.0
     restart: always
     environment:
@@ -22,7 +24,9 @@ services:
  
   pgadmin:
     container_name: dbadminer_cnt
-    build: ./dbadminer
+    build: 
+      context: .
+      dockerfile: dbadminer/Dockerfile
     image: epi_dbadminer:1.0
     restart: always
     environment:
@@ -32,7 +36,7 @@ services:
     depends_on:
       - dbdatasrv
     ports:
-    - "8081:${PGADMIN_PORT}"
+    - "8082:${PGADMIN_PORT}"
     volumes:
     - pgadmin-data:/var/lib/pgadmin
     links:
@@ -42,7 +46,9 @@ services:
 
   andro:
     container_name: andro_cnt
-    build: ./andro
+    build:
+      context: .
+      dockerfile: andro/Dockerfile
     image: epi_andro:1.0
     restart: always
     environment:
@@ -59,9 +65,26 @@ services:
       ANDRO_APP_PORT: ${AN_APP_PORT}
       ANDRO_API_JWT_SECRET: ${AN_API_JWT_SECRET}
     ports:
-    - "8080:${AN_APP_PORT}"
+    - "8081:${AN_APP_PORT}"
     depends_on:
       - dbdatasrv
+    networks:
+      - kuipernet
+
+  websrv:
+    container_name: websrv_cnt
+    build: 
+      context: .
+      dockerfile: websrv/Dockerfile
+    image: epi_websrv:1.0
+    restart: always
+    volumes:
+      - ./quark/dist:/usr/share/nginx/html
+    ports:
+      - "8080:8080"
+      - "8443:8443"
+    depends_on:
+      - andro
     networks:
       - kuipernet
 
