--- a/andro/Dockerfile
+++ b/andro/Dockerfile
@@ -16,12 +16,12 @@ ENV GO111MODULE=on \
 WORKDIR /build
 
 # Copy and download dependency using go mod
-COPY go.mod .
-COPY go.sum .
+COPY ./andro/go.mod .
+COPY ./andro/go.sum .
 RUN go mod download
 
 # Copy the code into the container
-COPY . .
+COPY ./andro .
 
 
 # -------------------------------------
